# keyflare

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE.txt  PyInstaller.spec  PyRect-0.2.0-py2.py3-none-any.whl  README.md  build.yml  data.db  identifier.spec  main.spec  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: main.yml
aikeyboard/: identifier.py  system.py
docs/source/: conf.py  keyflare.rst  modules.rst
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
keyflare/: __init__.py  __main__.py  gui.py  image_pipeline.py  keyflare.py  main.py  mouseflare.py  system.py  usages.py
keyflare/tests/: __init__.py  test_gui.py  test_image_pipeline.py  test_system.py  test_usages.py
src/: identifier.py  system.py
